@@ -1,3 +1,8 @@
+2009-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/winWm.test: Make sure the window is still present
+	* win/tkWinWm.c: when handling delayed activation [Bug 2899949]
+
 2009-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tests/winDialog.test: Backported fix for running dialog tests
